<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.sdpoem.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.sdpoem.ui.dashboard.DashboardFragment"
        android:label="@string/title_poemdb"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.sdpoem.ui.notifications.NotificationsFragment"
        android:label="@string/title_games"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_own_poem"
        android:name="com.example.sdpoem.ui.notifications.NotificationsFragment"
        android:label="@string/title_own_poem"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_my"
        android:name="com.example.sdpoem.ui.notifications.NotificationsFragment"
        android:label="@string/title_my"
        tools:layout="@layout/fragment_notifications" />
</navigation>